--- a/.env.development
+++ b/.env.development
@@ -3,9 +3,15 @@ NODE_ENV=
 
 SECRET_KEY=
 
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_DB=
-DATABASE_LOGGING=
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_LOGGING=
+
+POSTGRES_HOST_MIGRATION=
+POSTGRES_PORT_MIGRATION=
+
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
