--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "puspenerbal_sisfotu_be",
+  "name": "klontong-apps",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Mini e-commerce apps",
+  "author": "tsaqifrazin@gmail.com",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "npx typeorm-ts-node-commonjs ",
-    "typeorm:create-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:create",
+    "typeorm:create-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create",
     "typeorm:run-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:run",
     "typeorm:revert-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:revert",
     "typeorm:generate-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:generate",
@@ -42,9 +42,9 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/multer": "^1.4.7",
     "axios": "^1.5.1",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.0.0",
