--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.11",
     "typeorm-extension": "^3.5.0",
-    "typeorm-transactional": "^0.5.0"
+    "typeorm-transactional": "^0.5.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@automock/adapters.nestjs": "^2.1.0",
