--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/common": "9.2.1",
     "@nestjs/config": "^2.3.0",
     "@nestjs/core": "9.2.1",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "9.2.1",
     "@nestjs/passport": "^9.0.1",
