--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: npm run test:cov
+      run: npm run test
       continue-on-error: false
 
     - name: Coverage threshold check
