add package.json to scp

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,20 +43,21 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "PORT=${{ env.PORT }}" > .env
-          echo "NODE_ENV=${{ env.NODE_ENV }}" >> .env
-          echo "SECRET_KEY=${{ env.SECRET_KEY }}" >> .env
-          echo "POSTGRES_HOST=${{ env.POSTGRES_HOST }}" >> .env
-          echo "POSTGRES_PORT=${{ env.POSTGRES_PORT }}" >> .env
-          echo "POSTGRES_USERNAME=${{ env.POSTGRES_USERNAME }}" >> .env
-          echo "POSTGRES_PASSWORD=${{ env.POSTGRES_PASSWORD }}" >> .env
-          echo "POSTGRES_DB=${{ env.POSTGRES_DB }}" >> .env
-          echo "POSTGRES_LOGGING=${{ env.POSTGRES_LOGGING }}" >> .env
-          echo "POSTGRES_HOST_MIGRATION=${{ env.POSTGRES_HOST_MIGRATION }}" >> .env
-          echo "POSTGRES_PORT_MIGRATION=${{ env.POSTGRES_PORT_MIGRATION }}" >> .env
-          echo "ADMIN_EMAIL=${{ env.ADMIN_EMAIL }}" >> .env
-          echo "ADMIN_PASSWORD=${{ env.ADMIN_PASSWORD }}" >> .env
-          echo "AZURE_STORAGE_CONNECTION_STRING=${{ env.AZURE_STORAGE_CONNECTION_STRING }}" >> .env
+          echo "PORT=${{ vars.PORT }}" > .env
+          echo "NODE_ENV=${{ vars.NODE_ENV }}" >> .env
+          echo "SECRET_KEY=${{ vars.SECRET_KEY }}" >> .env
+          echo "POSTGRES_HOST=${{ vars.POSTGRES_HOST }}" >> .env
+          echo "POSTGRES_PORT=${{ vars.POSTGRES_PORT }}" >> .env
+          echo "POSTGRES_USERNAME=${{ vars.POSTGRES_USERNAME }}" >> .env
+          echo "POSTGRES_PASSWORD=${{ vars.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_DB=${{ vars.POSTGRES_DB }}" >> .env
+          echo "POSTGRES_LOGGING=${{ vars.POSTGRES_LOGGING }}" >> .env
+          echo "POSTGRES_HOST_MIGRATION=${{ vars.POSTGRES_HOST_MIGRATION }}" >> .env
+          echo "POSTGRES_PORT_MIGRATION=${{ vars.POSTGRES_PORT_MIGRATION }}" >> .env
+          echo "ADMIN_EMAIL=${{ vars.ADMIN_EMAIL }}" >> .env
+          echo "ADMIN_PASSWORD=${{ vars.ADMIN_PASSWORD }}" >> .env
+          echo "AZURE_STORAGE_CONNECTION_STRING=${{ vars.AZURE_STORAGE_CONNECTION_STRING }}" >> .env
+          cat ${{ vars.NODE_ENV }}
 
       - name: Push Docker image
         run: docker compose push
@@ -73,7 +74,7 @@ jobs:
 
       - name: Deploy to production server
         run: |
-          scp -r docker-compose.yaml .env Dockerfile ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/klontong 
+          scp -r docker-compose.yaml .env Dockerfile package.json ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/klontong 
           ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << EOF
             cd ~/klontong
             docker compose pull
