--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,11 @@ services:
     build: .
     ports:
       - "8010:8010"
-    volumes:
-      - .:/app
     depends_on:
       - db
     container_name: klontong-app
+    env_file:
+      - .env
   db:
     image: postgres:13
     ports:
