--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typeorm": "npx typeorm-ts-node-commonjs ",
     "typeorm:create-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create",
     "typeorm:run-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:run",
+    "typeorm:run-seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfigSeed migration:run",
     "typeorm:revert-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:revert",
     "typeorm:generate-migration": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/utils/ormconfig migration:generate",
     "typeorm:db:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs db:create -d ./src/utils/ormconfig"
